syntax = "proto3";
package temps;
option go_package="server/temppb";

message TempRequest {}

message TempResponse {
  int32 temperature = 1;
}

service Temp {
  rpc TempStream(TempRequest) returns (stream TempResponse) {};
}
